--- a/backend/app/.env
+++ b/backend/app/.env
@@ -1,2 +1,16 @@
-LLM_API_KEY=dummy-key
-LLM_BASE_URL=https://example.com/llm-endpoint
+# Cloud.ru GigaChat API настройки
+LLM_API_KEY=NzA2YzY0MTQtODAxNi00ZTk1LTkzZDAtZmU4NzBlNDQ0ZWE0.1a8a4c511a23a769c416de5b36c16a0b
+LLM_BASE_URL=https://foundation-models.api.cloud.ru/v1
+
+LLM_MODEL=ai-sage/GigaChat3-10B-A1.8B
+
+# Настройки генерации
+LLM_TIMEOUT_SECONDS=60
+LLM_MAX_RETRIES=3
+LLM_TEMPERATURE=0.3
+LLM_MAX_TOKENS=4096
+
+# Приложение
+APP_NAME=DevTuls Backend with Cloud.ru GigaChat
+APP_VERSION=1.0.0
+LOG_LEVEL=INFO
