--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "devtuls",
+  "name": "devtuls-frontend",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -15,11 +15,10 @@
     "axios": "^1.6.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.6.1",
-    "@prismjs/themes": "^1.9.0",
-    "react-json-view": "^1.21.3",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "react-markdown": "^9.0.1",
+    "react-json-view": "^1.21.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
