--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,16 @@
+# Cloud.ru GigaChat API ключ
+LLM_API_KEY=NzA2YzY0MTQtODAxNi00ZTk1LTkzZDAtZmU4NzBlNDQ0ZWE0.1a8a4c511a23a769c416de5b36c16a0b
 
+# Настройки Cloud.ru API
+LLM_BASE_URL=https://foundation-models.api.cloud.ru/v1
+LLM_MODEL=ai-sage/GigaChat3-10B-A1.8B
+LLM_TEMPERATURE=0.3
+LLM_MAX_TOKENS=2048
+
+# Общие настройки
+LOG_LEVEL=INFO
+APP_NAME=DevTuls AI Agent
+APP_VERSION=0.1.0
+
+# Настройки Docker
+COMPOSE_PROJECT_NAME=devtuls-ai
